--- a/src/main/resources/test.fxml
+++ b/src/main/resources/test.fxml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerShoppingCart">
-    <!-- Hier kannst du die anderen Nodes hinzufügen, die du erstellt hast -->
-    <ImageView fx:id="imageView" fitHeight="124.0" fitWidth="117.0" layoutX="14.0" layoutY="17.0" />
 
-    <Label fx:id="nameLabel" layoutX="152.0" layoutY="32.0" prefHeight="30.0" prefWidth="246.0" textFill="#022235">
-        <font>
-            <Font name="System Bold" size="20.0" />
-        </font>
-    </Label>
-
-    <Label fx:id="priceLabel" layoutX="152.0" layoutY="92.0" prefHeight="30.0" prefWidth="124.0" textFill="#022235">
-        <font>
-            <Font name="System Bold" size="20.0" />
-        </font>
-    </Label>
-
-    <Label fx:id="amountLabel" layoutX="300.0" layoutY="92.0" prefHeight="30.0" prefWidth="104.0" textFill="#022235">
-        <font>
-            <Font name="System Bold" size="20.0" />
-        </font>
-    </Label>
-
-    <Button fx:id="deleteButton" layoutX="471.0" layoutY="92.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="65.0" style="-fx-background-color: #022235;" text="Delete" textFill="WHITE" />
-   <Spinner fx:id="spAmount" layoutX="414.0" layoutY="95.0" prefHeight="25.0" prefWidth="51.0" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="292.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label layoutX="14.0" layoutY="9.0" prefHeight="25.0" prefWidth="149.0" text="Name" textFill="#022235">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="163.0" layoutY="9.0" prefHeight="25.0" prefWidth="39.0" text="10" textFill="#022235">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="215.0" layoutY="9.0" prefHeight="25.0" prefWidth="63.0" text="100.00€" textFill="#022235">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
