--- a/src/main/resources/ShoppingCart.fxml
+++ b/src/main/resources/ShoppingCart.fxml
@@ -61,7 +61,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Button fx:id="btCheckout" mnemonicParsing="false" prefHeight="40.0" prefWidth="310.0" style="-fx-background-color: #022235;" text="to the checkout" textFill="WHITE">
+            <Button fx:id="btCheckout" mnemonicParsing="false" onAction="#checkBtCheckoutClick" prefHeight="40.0" prefWidth="310.0" style="-fx-background-color: #022235;" text="to the checkout" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
