--- a/src/main/resources/Profil.fxml
+++ b/src/main/resources/Profil.fxml
@@ -35,7 +35,7 @@
             </Label>
             <StackPane layoutX="87.0" layoutY="129.0" prefHeight="288.0" prefWidth="622.0">
                <children>
-                  <VBox prefHeight="299.0" prefWidth="620.0" spacing="15.0">
+                  <VBox fx:id="vbDefault" prefHeight="299.0" prefWidth="620.0" spacing="15.0">
                      <children>
                         <Label prefHeight="30.0" prefWidth="637.0" style="-fx-background-color: #022235;" text="manage user data:" textFill="WHITE">
                            <font>
@@ -92,14 +92,14 @@
                                     <Font size="15.0" />
                                  </font>
                               </Label>
-                              <HBox alignment="CENTER_LEFT" prefHeight="81.0" prefWidth="620.0" spacing="350.0">
+                              <HBox alignment="CENTER" prefHeight="74.0" prefWidth="619.0" spacing="300.0">
                                  <children>
                                     <Button fx:id="btnChangePassword" mnemonicParsing="false" onMouseClicked="#enablePasswordChange" prefHeight="32.0" prefWidth="153.0" style="-fx-background-color: #022235;" text="change password" textFill="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
                                     </Button>
-                                    <Button fx:id="btnDeleteAccount" mnemonicParsing="false" onMouseClicked="#enableAccountDeletion" prefHeight="32.0" prefWidth="137.0" style="-fx-background-color: #022235;" text="delete account" textFill="WHITE">
+                                    <Button fx:id="btnDeleteAccount" mnemonicParsing="false" onMouseClicked="#enableAccountDeletion" prefHeight="32.0" prefWidth="142.0" style="-fx-background-color: #022235;" text="delete account" textFill="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -113,7 +113,7 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox fx:id="passwordChange" prefHeight="313.0" prefWidth="651.0" spacing="20.0" style="-fx-background-color: #ffffff;" visible="false">
+                  <VBox fx:id="passwordChange" disable="true" prefHeight="313.0" prefWidth="651.0" spacing="9.0" visible="false">
                      <children>
                         <Label prefHeight="30.0" prefWidth="637.0" style="-fx-background-color: #022235;" text="change password:" textFill="WHITE">
                            <font>
@@ -180,7 +180,40 @@
                         </HBox>
                      </children>
                   </VBox>
-                  <VBox fx:id="vbAccountDeletion" disable="true" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" visible="false" />
+                  <VBox fx:id="vbAccountDeletion" disable="true" prefHeight="299.0" prefWidth="620.0" spacing="50.0" visible="false">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="637.0" style="-fx-background-color: #022235;" text="Are you sure?" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="159.0" prefWidth="622.0" text="Your account data will be irreversibly deleted. This action will log you out automatically!" textAlignment="CENTER" textFill="#d02626" wrapText="true">
+                           <font>
+                              <Font name="System Bold" size="22.0" />
+                           </font>
+                           <padding>
+                              <Insets left="60.0" right="60.0" />
+                           </padding>
+                        </Label>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="25.0">
+                           <padding>
+                              <Insets right="12.0" />
+                           </padding>
+                           <children>
+                              <Button mnemonicParsing="false" onMouseClicked="#disableAccountDeletion" prefHeight="32.0" prefWidth="153.0" style="-fx-background-color: #022235;" text="cancel" textFill="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Button>
+                              <Button fx:id="btnDeleteAccount1" mnemonicParsing="false" onMouseClicked="#deleteAccount" prefHeight="32.0" prefWidth="142.0" style="-fx-background-color: #022235;" text="delete account" textFill="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
                </children>
             </StackPane>
          </children>
