--- a/src/main/resources/Profil.fxml
+++ b/src/main/resources/Profil.fxml
@@ -18,22 +18,22 @@
    <center>
       <AnchorPane prefHeight="487.0" prefWidth="828.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="477.0" fitWidth="783.0" layoutX="153.0" layoutY="-1.0" opacity="0.27" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="153.0" AnchorPane.topAnchor="-1.0">
+            <ImageView fitHeight="477.0" fitWidth="783.0" layoutX="192.0" opacity="0.27" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@images/other/Logo_ohne_Text.png" />
                </image>
             </ImageView>
-            <Label fx:id="lbUsername" alignment="BOTTOM_CENTER" layoutX="152.0" layoutY="31.0" prefHeight="58.0" prefWidth="479.0" text="Username" textFill="#022235">
+            <Label fx:id="lbUsername" alignment="BOTTOM_CENTER" layoutX="190.0" layoutY="35.0" prefHeight="58.0" prefWidth="479.0" text="Username" textFill="#022235">
                <font>
                   <Font name="System Bold" size="42.0" />
                </font>
             </Label>
-            <Label fx:id="lbUserEmail" alignment="TOP_CENTER" layoutX="250.0" layoutY="82.0" prefHeight="17.0" prefWidth="284.0" text="user-email" textFill="#022235">
+            <Label fx:id="lbUserEmail" alignment="TOP_CENTER" layoutX="288.0" layoutY="82.0" prefHeight="17.0" prefWidth="284.0" text="user-email" textFill="#022235">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <StackPane layoutX="87.0" layoutY="129.0" prefHeight="288.0" prefWidth="622.0">
+            <StackPane layoutX="120.0" layoutY="133.0" prefHeight="288.0" prefWidth="622.0">
                <children>
                   <VBox fx:id="vbDefault" prefHeight="299.0" prefWidth="620.0" spacing="15.0">
                      <children>
@@ -56,7 +56,7 @@
                                           <Font size="16.0" />
                                        </font>
                                     </TextField>
-                                    <Button fx:id="btnConfirmUsername" mnemonicParsing="false" onMouseClicked="#checkbtnConfirmUsernameClick" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #022235;" text="confirm" textFill="WHITE">
+                                    <Button fx:id="btnConfirmUsername" mnemonicParsing="false" onMouseClicked="#confirmUsername" prefHeight="32.0" prefWidth="90.0" style="-fx-background-color: #022235;" text="confirm" textFill="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -92,9 +92,14 @@
                                     <Font size="15.0" />
                                  </font>
                               </Label>
-                              <HBox alignment="CENTER" prefHeight="74.0" prefWidth="619.0" spacing="300.0">
+                              <HBox alignment="CENTER" prefHeight="74.0" prefWidth="619.0" spacing="103.0">
                                  <children>
-                                    <Button fx:id="btnChangePassword" mnemonicParsing="false" onMouseClicked="#enablePasswordChange" prefHeight="32.0" prefWidth="153.0" style="-fx-background-color: #022235;" text="change password" textFill="WHITE">
+                                    <Button fx:id="btnChangePassword1" mnemonicParsing="false" onMouseClicked="#enablePasswordChange" prefHeight="32.0" prefWidth="153.0" style="-fx-background-color: #022235;" text="change password" textFill="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="btnChangePassword" mnemonicParsing="false" onMouseClicked="#logOut" prefHeight="32.0" prefWidth="99.0" style="-fx-background-color: #022235;" text="log out" textFill="WHITE">
                                        <font>
                                           <Font size="15.0" />
                                        </font>
@@ -220,9 +225,9 @@
       </AnchorPane>
    </center>
    <top>
-      <HBox prefHeight="75.0" prefWidth="860.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
+      <HBox prefHeight="75.0" prefWidth="860.0" spacing="280.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btHome" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="75.0" prefWidth="101.0" style="-fx-background-color: white;">
+            <Button fx:id="btHome" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="75.0" prefWidth="69.0" style="-fx-background-color: white;">
                <graphic>
                   <ImageView fitHeight="48.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -235,53 +240,8 @@
                <font>
                   <Font name="System Bold" size="33.0" />
                </font>
-               <HBox.margin>
-                  <Insets left="355.0" />
-               </HBox.margin>
             </Label>
-            <Button fx:id="btShoppingcart" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="74.0" prefWidth="75.0" style="-fx-background-color: #022235;">
-               <graphic>
-                  <ImageView fitHeight="39.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icons/einkaufswagen-schwarze-form.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
          </children>
       </HBox>
    </top>
-   <left>
-      <VBox prefHeight="475.0" prefWidth="64.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="156.0" prefWidth="66.0" style="-fx-background-color: #022235; -fx-border-color: white;">
-               <graphic>
-                  <ImageView fitHeight="43.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icons/benutzerform.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="163.0" prefWidth="77.0" style="-fx-background-color: #022235; -fx-border-color: white;">
-               <graphic>
-                  <ImageView fitHeight="38.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icons/briefumschlag.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="168.0" prefWidth="77.0" style="-fx-background-color: #022235; -fx-border-color: white;">
-               <graphic>
-                  <ImageView fitHeight="38.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icons/herzform-silhouette.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </VBox>
-   </left>
 </BorderPane>
