--- a/src/main/resources/Checkout.fxml
+++ b/src/main/resources/Checkout.fxml
@@ -64,7 +64,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-                <Button fx:id="btBuy" mnemonicParsing="false" prefHeight="40.0" prefWidth="310.0" style="-fx-background-color: #022235;" text="Buy" textFill="WHITE">
+                <Button fx:id="btBuy" mnemonicParsing="false" onAction="#checkBtBuyClick" prefHeight="40.0" prefWidth="310.0" style="-fx-background-color: #022235;" text="Buy" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
@@ -75,6 +75,11 @@
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
+            <ImageView fitHeight="442.0" fitWidth="546.0" layoutX="60.0" layoutY="19.0" opacity="0.27" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/other/Logo_ohne_Text.png" />
+               </image>
+            </ImageView>
                 <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="550.0" style="-fx-background-color: #023A50;" text="Payment informations" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="20.0" />
