--- a/src/main/resources/Profil.fxml
+++ b/src/main/resources/Profil.fxml
@@ -37,7 +37,7 @@
                <children>
                   <VBox fx:id="vbDefault" prefHeight="299.0" prefWidth="620.0" spacing="15.0">
                      <children>
-                        <Label prefHeight="30.0" prefWidth="637.0" style="-fx-background-color: #022235;" text="manage user data:" textFill="WHITE">
+                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="637.0" style="-fx-background-color: #022235; -fx-background-radius: 10;" text="manage user data" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
@@ -227,11 +227,11 @@
    <top>
       <HBox prefHeight="75.0" prefWidth="860.0" spacing="280.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btHome" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="75.0" prefWidth="69.0" style="-fx-background-color: white;">
+            <Button fx:id="btHome" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="73.0" prefWidth="69.0" style="-fx-background-color: #022235;">
                <graphic>
                   <ImageView fitHeight="48.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/icons/Pfeil_Links_Blau.png" />
+                        <Image url="@images/icons/Pfeil_Links_Weiß.png" />
                      </image>
                   </ImageView>
                </graphic>
