--- a/src/main/resources/test.fxml
+++ b/src/main/resources/test.fxml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="292.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="42.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="14.0" layoutY="9.0" prefHeight="25.0" prefWidth="149.0" text="Name" textFill="#022235">
+      <Label layoutX="72.0" layoutY="9.0" prefHeight="25.0" prefWidth="149.0" text="Name" textFill="#022235">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="163.0" layoutY="9.0" prefHeight="25.0" prefWidth="39.0" text="10" textFill="#022235">
+      <Label layoutX="221.0" layoutY="9.0" prefHeight="25.0" prefWidth="39.0" text="10" textFill="#022235">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="215.0" layoutY="9.0" prefHeight="25.0" prefWidth="63.0" text="100.00€" textFill="#022235">
+      <Label layoutX="273.0" layoutY="9.0" prefHeight="25.0" prefWidth="63.0" text="100.00€" textFill="#022235">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
+      <ImageView fitHeight="34.0" fitWidth="39.0" layoutX="6.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/groceries/Apple.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
