--- a/src/main/resources/Checkout.fxml
+++ b/src/main/resources/Checkout.fxml
@@ -64,7 +64,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-                <Button fx:id="btBuy" mnemonicParsing="false" onAction="#checkBtBuyClick" prefHeight="40.0" prefWidth="310.0" style="-fx-background-color: #022235;" text="Buy" textFill="WHITE">
+                <Button fx:id="btBuy" mnemonicParsing="false" onAction="#checkBtBuyClick" onMouseEntered="#btBuyhover" prefHeight="40.0" prefWidth="310.0" style="-fx-background-color: #022235;" text="Buy" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
@@ -85,7 +85,7 @@
                         <Font name="System Bold" size="20.0" />
                     </font>
                 </Label>
-            <TextField fx:id="tfAdress" layoutX="81.0" layoutY="151.0" prefHeight="25.0" prefWidth="388.0" promptText="Address" />
+            <TextField fx:id="tfAddress" layoutX="81.0" layoutY="151.0" prefHeight="25.0" prefWidth="388.0" promptText="Address" />
             <Label layoutX="53.0" layoutY="74.0" prefHeight="30.0" prefWidth="168.0" text="Delivery Address" textFill="#022235">
                <font>
                   <Font name="System Bold" size="20.0" />
