--- a/src/main/resources/LastPage.fxml
+++ b/src/main/resources/LastPage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -68,6 +69,11 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <ScrollPane opacity="0.92" prefHeight="256.0" prefWidth="350.0" style="-fx-background-color: none;">
+                     <content>
+                        <VBox fx:id="vboxPurchaseIntern" prefHeight="251.0" prefWidth="325.0" />
+                     </content>
+                  </ScrollPane>
                </children>
             </VBox>
             <Button fx:id="btPurchase" layoutX="454.0" layoutY="124.0" mnemonicParsing="false" onAction="#checkBtPurchasesClick" prefHeight="52.5" prefWidth="56.0" style="-fx-background-color: #022235; -fx-background-radius: 5;">
