--- a/src/main/resources/MainPage.fxml
+++ b/src/main/resources/MainPage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="550.0" minWidth="860.0" prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerMainPage">
@@ -44,6 +46,12 @@
                      </image>
                   </ImageView>
                </graphic></Button>
+            <Circle fill="#20b14e" layoutX="844.0" layoutY="17.0" radius="15.0" stroke="BLACK" strokeType="INSIDE" />
+            <Label fx:id="lbCartAmount" alignment="CENTER" contentDisplay="TOP" layoutX="835.0" layoutY="4.0" prefHeight="26.0" prefWidth="19.0" text="0" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
 
             </children>
         </AnchorPane>
