--- a/src/main/resources/Login.fxml
+++ b/src/main/resources/Login.fxml
@@ -12,9 +12,9 @@
 
 <BorderPane prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerLogin">
    <right>
-      <AnchorPane prefHeight="448.0" prefWidth="397.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="500.0" prefWidth="580.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="583.0" fitWidth="592.0" layoutX="-186.0" layoutY="-55.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="583.0" fitWidth="592.0" layoutY="-55.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
@@ -30,24 +30,24 @@
       </AnchorPane>
    </top>
    <left>
-      <AnchorPane prefHeight="454.0" prefWidth="378.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="500.0" prefWidth="280.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="tbUsername" layoutX="51.0" layoutY="153.0" prefHeight="43.0" prefWidth="184.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+            <TextField fx:id="tbUsername" layoutX="55.0" layoutY="153.0" prefHeight="40.0" prefWidth="180.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-            <PasswordField fx:id="pbPassword" layoutX="55.0" layoutY="226.0" onAction="#validateLogin" prefHeight="40.0" prefWidth="176.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+            <PasswordField fx:id="pbPassword" layoutX="55.0" layoutY="226.0" onAction="#validateLogin" prefHeight="40.0" prefWidth="180.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
             </PasswordField>
-            <Button fx:id="btLogin" layoutX="55.0" layoutY="331.0" mnemonicParsing="false" onAction="#checkbtLoginClick" prefHeight="28.0" prefWidth="67.0" style="-fx-background-color: #01212E;" text="Login" textFill="WHITE">
+            <Button fx:id="btLogin" layoutX="55.0" layoutY="330.0" mnemonicParsing="false" onAction="#checkbtLoginClick" prefHeight="30.0" prefWidth="70.0" style="-fx-background-color: #01212E;" text="Login" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
-            <Button fx:id="btRegister" layoutX="165.0" layoutY="332.0" mnemonicParsing="false" onAction="#checkbtRegisterClick" prefHeight="27.0" prefWidth="70.0" style="-fx-background-color: #022235;" text="Register" textFill="WHITE">
+            <Button fx:id="btRegister" layoutX="165.0" layoutY="330.0" mnemonicParsing="false" onAction="#checkbtRegisterClick" prefHeight="30.0" prefWidth="70.0" style="-fx-background-color: #022235;" text="Register" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -57,7 +57,7 @@
                   <Font name="Yu Gothic UI Bold" size="52.0" />
                </font>
             </Label>
-            <Label fx:id="lbLoginfailed" layoutX="43.0" layoutY="291.0" prefHeight="17.0" prefWidth="201.0" textFill="#022235" />
+            <Label fx:id="lbLoginfailed" layoutX="55.0" layoutY="280.0" prefHeight="40.0" prefWidth="180.0" textAlignment="CENTER" textFill="#022235" />
          </children>
       </AnchorPane>
    </left>
