--- a/src/main/resources/Profil.fxml
+++ b/src/main/resources/Profil.fxml
@@ -227,19 +227,25 @@
    <top>
       <HBox prefHeight="75.0" prefWidth="860.0" spacing="280.0" style="-fx-background-color: #022235;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btHome" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="73.0" prefWidth="69.0" style="-fx-background-color: #022235;">
+            <Button fx:id="btHome" mnemonicParsing="false" onAction="#checkBtHomeClick" prefHeight="73.0" prefWidth="70.0" style="-fx-background-color: #022235;">
                <graphic>
-                  <ImageView fitHeight="48.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="47.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/icons/Pfeil_Links_Weiß.png" />
                      </image>
                   </ImageView>
                </graphic>
+               <HBox.margin>
+                  <Insets right="35.0" />
+               </HBox.margin>
             </Button>
-            <Label prefHeight="75.0" prefWidth="511.0" text="Profil" textFill="WHITE">
+            <Label prefHeight="75.0" prefWidth="88.0" text="Profil" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="33.0" />
                </font>
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
             </Label>
          </children>
       </HBox>
