--- a/src/main/resources/Register.fxml
+++ b/src/main/resources/Register.fxml
@@ -12,9 +12,9 @@
 
 <BorderPane prefHeight="550.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainpackage.ControllerRegister">
     <right>
-        <AnchorPane prefHeight="448.0" prefWidth="397.0" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="500.0" prefWidth="580.0" BorderPane.alignment="CENTER">
             <children>
-            <ImageView fitHeight="577.0" fitWidth="715.0" layoutX="-180.0" layoutY="-56.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="583.0" fitWidth="592.0" layoutY="-55.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/other/SpeisenOase-Logo.jpg" />
                </image>
@@ -30,44 +30,44 @@
         </AnchorPane>
     </top>
     <left>
-        <AnchorPane prefHeight="454.0" prefWidth="378.0" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="500.0" prefWidth="280.0" BorderPane.alignment="CENTER">
             <children>
                 <Label layoutX="67.0" layoutY="41.0" prefHeight="58.0" prefWidth="158.0" text="Register" textFill="#022235">
                     <font>
                         <Font name="Yu Gothic UI Bold" size="40.0" />
                     </font>
                 </Label>
-                <TextField fx:id="tbUsername" layoutX="57.0" layoutY="130.0" prefHeight="27.0" prefWidth="177.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+                <TextField fx:id="tbUsername" layoutX="55.0" layoutY="130.0" prefHeight="30.0" prefWidth="180.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
                 </TextField>
-            <TextField fx:id="tbEmail" layoutX="57.0" layoutY="173.0" prefHeight="27.0" prefWidth="177.0" promptText="Email" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+            <TextField fx:id="tbEmail" layoutX="55.0" layoutY="173.0" prefHeight="30.0" prefWidth="180.0" promptText="Email" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-                <PasswordField fx:id="pbPassword" layoutX="58.0" layoutY="228.0" prefHeight="17.0" prefWidth="174.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+                <PasswordField fx:id="pbPassword" layoutX="55.0" layoutY="228.0" prefHeight="30.0" prefWidth="180.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </PasswordField>
-            <PasswordField fx:id="pbPasswordcheck" layoutX="57.0" layoutY="272.0" prefHeight="17.0" prefWidth="174.0" promptText="Password check" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
+            <PasswordField fx:id="pbPasswordcheck" layoutX="55.0" layoutY="272.0" prefHeight="30.0" prefWidth="180.0" promptText="Password check" style="-fx-background-color: transparent; -fx-border-color: #022235; -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="14.0" />
                </font>
             </PasswordField>
-                <Button fx:id="btRegister" layoutX="57.0" layoutY="360.0" mnemonicParsing="false" onAction="#checkRegisterClick" prefHeight="27.0" prefWidth="70.0" style="-fx-background-color: #022235;" text="Register" textFill="WHITE">
+                <Button fx:id="btRegister" layoutX="55.0" layoutY="360.0" mnemonicParsing="false" onAction="#checkRegisterClick" prefHeight="30.0" prefWidth="70.0" style="-fx-background-color: #022235;" text="Register" textFill="WHITE">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Button>
-                <Button fx:id="btBack" layoutX="166.0" layoutY="360.0" mnemonicParsing="false" onAction="#checkBackClick" prefHeight="28.0" prefWidth="67.0" style="-fx-background-color: #01212E;" text="Back" textFill="WHITE">
+                <Button fx:id="btBack" layoutX="165.0" layoutY="360.0" mnemonicParsing="false" onAction="#checkBackClick" prefHeight="30.0" prefWidth="70.0" style="-fx-background-color: #01212E;" text="Back" textFill="WHITE">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Button>
-            <Label fx:id="lbRegisterfailed" layoutX="57.0" layoutY="312.0" prefHeight="39.0" prefWidth="174.0" textFill="#01212e" wrapText="true" />
+            <Label fx:id="lbRegisterfailed" layoutX="55.0" layoutY="312.0" prefHeight="40.0" prefWidth="180.0" textAlignment="CENTER" textFill="#01212e" wrapText="true" />
             </children>
         </AnchorPane>
     </left>
