--- a/src/main/resources/ShoppingCart.fxml
+++ b/src/main/resources/ShoppingCart.fxml
@@ -26,9 +26,9 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-                <Button fx:id="btBack" layoutX="14.0" layoutY="10.0" mnemonicParsing="false" onAction="#checkBtBackClick" prefHeight="51.0" prefWidth="55.0" style="-fx-background-color: #022235;">
+                <Button fx:id="btBack" layoutY="-2.0" mnemonicParsing="false" onAction="#checkBtBackClick" prefHeight="75.0" prefWidth="70.0" style="-fx-background-color: #022235;">
                     <graphic>
-                        <ImageView fitHeight="46.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="47.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@images/icons/Pfeil_Links_Weiß.png" />
                             </image>
